--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures{
-//        dataBinding true //Remember to import 'kotli-kapt' up there
+        dataBinding true //Remember to import 'kotli-kapt' up there
         viewBinding true
 
     }
