--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.anthonyangatia.mobilemoneyanalyzer" >
+    package="com.anthonyangatia.mobilemoneyanalyzer">
 
     <uses-permission android:name="android.permission.READ_SMS" />
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
     <application
         android:allowBackup="true"
@@ -11,12 +11,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MobileMoneyAnalyzer" >
+        android:theme="@style/Theme.MobileMoneyAnalyzer">
+        <service
+            android:name=".serviceandreceiver.MyIntentService"
+            android:exported="false"></service>
+
         <receiver
             android:name=".serviceandreceiver.SmsReceiver"
             android:enabled="true"
-            android:exported="true" >
-        </receiver>
+            android:exported="true"></receiver>
 
         <service
             android:name=".serviceandreceiver.SmsService"
@@ -25,7 +28,7 @@
 
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
