--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         kotlin_version ='1.5.20'
         room_version = '2.3.0'
         coroutine_version = '1.3.7'
+        navigationVersion ='2.3.5'
     }
     repositories {
         google()
@@ -12,6 +13,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+
 
 
         // NOTE: Do not place your application dependencies here; they belong
