--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
 
     implementation 'com.google.dagger:dagger:2.40.5'
     kapt 'com.google.dagger:dagger-compiler:2.40.5'
+    //Export data
+    implementation 'com.github.doyaaaaaken:kotlin-csv-jvm:1.2.0'
 
 
     testImplementation 'junit:junit:4.13.2'
